[package]
name = "pekin"
version = "0.1.0"
authors = ["Gabriel Cavalcante <gscavalcante@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = [ "attributes" ] }
clap = { version = "3.2.15", features = ["derive"] }
sqlx = { version = "0.6", features = [  "runtime-async-std-native-tls", "sqlite", "uuid" ] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
